# xnettop

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
src/xnettop/: __init__.py  __main__.py  aggregator.py  connections.py  sniffer.py  ui.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_connections.py  test_sniffer.py
