[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xnettop"
version = "0.1.0"
description = "Cross-platform network traffic monitor by process"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Evan Sultanik", email = "evan.sultanik@trailofbits.com" }]
keywords = ["network", "monitor", "traffic", "process", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "psutil>=7.0.0",
    "scapy>=2.7.0",
    "textual>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
xnettop = "xnettop.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xnettop"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
